# FiveHandPoker

./: FiveHandPoker.py  Hand.py  README.md  setup.cfg
FiveHandPoker/: Card.py  Game.py  Hand.py  main.py
tests/: test_Card.py  test_Hand.py
