# coding: utf-8
[metadata]
name = FiveHandPoker
version = 0.2
description = Five Hand Poker Game
long_description = file: README.rst
author = Matthieu Clemenceau
author_email = matthieu.clemenceau@gmail.com
project_urls =
    Documentation = https://pibootctl.readthedocs.io/
    Source Code = https://github.com/waveform80/pibootctl
    Issue Tracker = https://github.com/waveform80/pibootctl/issues
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.8

[options]
packages = find:
install_requires =
    setuptools

[options.extras_require]
test =
    pytest

[options.entry_points]
console_scripts =
    fivehandpoker = fivehandpoker.game:main

[tool:pytest]
testpaths = tests